--- a/frontend/web/uw/stylesheets/style.css
+++ b/frontend/web/uw/stylesheets/style.css
@@ -608,3 +608,249 @@
   margin-bottom: 0px;
   padding-bottom: 34px;
 }
+
+/* line 528, ../sass/style.scss */
+.front .tass_logo {
+  display: none;
+}
+/* line 531, ../sass/style.scss */
+.front .grid_wrap {
+  margin-top: 49px;
+}
+/* line 534, ../sass/style.scss */
+.front .front_text {
+  text-align: center;
+  position: relative;
+  top: -29px;
+}
+/* line 538, ../sass/style.scss */
+.front .front_text h1 {
+  color: #283045;
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 22px;
+  letter-spacing: 0px;
+  font-size: 40px;
+  line-height: 49px;
+}
+/* line 548, ../sass/style.scss */
+.front .front_text .logo_big {
+  display: inline-block;
+  margin: 0 auto;
+}
+/* line 553, ../sass/style.scss */
+.front .grid_item {
+  width: 50%;
+  padding: 9px;
+}
+/* line 558, ../sass/style.scss */
+.front .grid_item img {
+  width: 100%;
+  height: auto;
+}
+/* line 564, ../sass/style.scss */
+.front .map .text_info {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 59px 54px;
+  padding-top: 0px;
+}
+/* line 572, ../sass/style.scss */
+.front .map .small {
+  color: #010211;
+  font-size: 18px;
+  font-family: "Proxima Nova";
+  font-weight: 300;
+  padding-bottom: 11px;
+}
+/* line 579, ../sass/style.scss */
+.front .map a {
+  color: #010211;
+  font-size: 40px;
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  line-height: 39px;
+  word-spacing: -6px;
+  text-decoration: none;
+}
+/* line 590, ../sass/style.scss */
+.front .text1 .block_text {
+  background: #003878;
+  padding: 68px 56px;
+  padding-right: 100px;
+  padding-bottom: 95px;
+}
+/* line 596, ../sass/style.scss */
+.front .text1 .small {
+  color: #010211;
+  font-size: 18px;
+  font-family: "Proxima Nova";
+  font-weight: 300;
+}
+/* line 602, ../sass/style.scss */
+.front .text1 .text {
+  padding-top: 17px;
+}
+/* line 605, ../sass/style.scss */
+.front .text1 a {
+  color: white;
+  font-size: 40px;
+  font-family: "Proxima Nova";
+  line-height: 49px;
+  clear: both;
+  text-decoration: none;
+}
+/* line 615, ../sass/style.scss */
+.front .article .small {
+  color: #010211;
+  font-size: 18px;
+  font-family: "Proxima Nova";
+  font-weight: 300;
+}
+/* line 621, ../sass/style.scss */
+.front .article a {
+  color: #010211;
+  font-size: 40px;
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  line-height: 39px;
+  word-spacing: -6px;
+  text-decoration: none;
+}
+/* line 630, ../sass/style.scss */
+.front .article .text_info {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 59px 54px;
+  padding-top: 0px;
+}
+/* line 639, ../sass/style.scss */
+.front .text2 {
+  display: flex;
+  justify-content: space-between;
+}
+/* line 642, ../sass/style.scss */
+.front .text2 .small {
+  color: #010211;
+  font-size: 18px;
+  font-family: "Proxima Nova";
+  font-weight: 300;
+}
+/* line 648, ../sass/style.scss */
+.front .text2 a {
+  color: white;
+  font-size: 40px;
+  font-family: "Proxima Nova";
+  line-height: 39px;
+  text-decoration: none;
+}
+/* line 655, ../sass/style.scss */
+.front .text2 .part1 {
+  background: #b29d7e;
+}
+/* line 658, ../sass/style.scss */
+.front .text2 .part2 {
+  background: #c01a28;
+}
+/* line 661, ../sass/style.scss */
+.front .text2 .part {
+  width: calc(50% - 13px);
+}
+/* line 663, ../sass/style.scss */
+.front .text2 .part .block_text {
+  padding: 93px 32px;
+  padding-bottom: 97px;
+}
+/* line 666, ../sass/style.scss */
+.front .text2 .part .block_text .text {
+  padding-top: 13px;
+}
+/* line 674, ../sass/style.scss */
+.front .slider_front_item .slider_front img {
+  width: 100%;
+  height: auto;
+}
+/* line 679, ../sass/style.scss */
+.front .slider_front_item .owl-prev {
+  background: url("../../images/front_slider_left.png") center no-repeat;
+  text-indent: -9999px;
+  display: block;
+  width: 54px;
+  height: 54px;
+  position: absolute;
+  top: 50%;
+  margin-top: -27px;
+  left: 42px;
+}
+/* line 690, ../sass/style.scss */
+.front .slider_front_item .owl-next {
+  background: url("../../images/front_slider_right.png") center no-repeat;
+  text-indent: -9999px;
+  display: block;
+  width: 54px;
+  height: 54px;
+  position: absolute;
+  top: 50%;
+  margin-top: -27px;
+  right: 42px;
+}
+/* line 701, ../sass/style.scss */
+.front .slider_front_item .owl-dots {
+  position: absolute;
+  bottom: 27px;
+  left: 49px;
+}
+/* line 705, ../sass/style.scss */
+.front .slider_front_item .owl-dots .owl-dot {
+  float: left;
+  margin-right: 40px;
+}
+/* line 708, ../sass/style.scss */
+.front .slider_front_item .owl-dots .owl-dot span {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: #c19f63;
+  border-radius: 50%;
+}
+/* line 716, ../sass/style.scss */
+.front .slider_front_item .owl-dots .owl-dot.active span {
+  background: white;
+}
+/* line 723, ../sass/style.scss */
+.front .video {
+  position: relative;
+}
+/* line 725, ../sass/style.scss */
+.front .video .bottom_video {
+  position: relative;
+  display: block;
+}
+/* line 728, ../sass/style.scss */
+.front .video .bottom_video img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+/* line 733, ../sass/style.scss */
+.front .video .bottom_video:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 56, 120, 0.4) url("../../images/gallery_bottom_play.png") center no-repeat;
+}
+/* line 741, ../sass/style.scss */
+.front .video iframe {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
