--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -3,3 +3,32 @@
     border-radius: 5px;
     background-color: #fff;
 }
+
+/* Footer */
+.footer {
+    background: url('../images/footer_img.png') center top no-repeat;
+    width: 100%;
+    
+}
+.footer .top {
+    padding: 30px 0;
+}
+
+.footer .bottom {
+    padding-bottom: 30px;
+}
+
+.footer p {
+    font-family: "Proxima Nova Thin"; 
+    font-size: 14px;
+    line-height: 16px;
+    color: #fff;
+    text-align: center;
+    margin: 0;
+}
+
+.footer a {
+    color: #fff;
+    text-decoration: none;
+}
+/* End footer */
