--- a/frontend/web/uw/stylesheets/uw.css
+++ b/frontend/web/uw/stylesheets/uw.css
@@ -196,9 +196,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(0, 56, 120, 0.4) url("../../images/gallery_bottom_play.png") center no-repeat;
+  background: rgba(0, 56, 120, 0.4) url("../../images/video.svg") center no-repeat;
+  background-size: 134px;
 }
-/* line 165, ../sass/uw.scss */
+/* line 166, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img iframe {
   position: absolute;
   top: 0px;
@@ -208,11 +209,11 @@
   display: none;
 }
 
-/* line 176, ../sass/uw.scss */
+/* line 177, ../sass/uw.scss */
 .blue_top_bg {
   position: relative;
 }
-/* line 178, ../sass/uw.scss */
+/* line 179, ../sass/uw.scss */
 .blue_top_bg:before {
   position: absolute;
   width: 100%;
@@ -223,13 +224,13 @@
   background: url("../../images/blue_top_bg.png") center top no-repeat;
 }
 
-/* line 189, ../sass/uw.scss */
+/* line 190, ../sass/uw.scss */
 #object-map {
   position: relative;
   z-index: 1;
 }
 
-/* line 194, ../sass/uw.scss */
+/* line 195, ../sass/uw.scss */
 .white_text {
   color: white !important;
 }
