--- a/frontend/web/uw/sass/front.scss
+++ b/frontend/web/uw/sass/front.scss
@@ -20,8 +20,8 @@
 			line-height: 49px;
 			@media screen and (max-width: 1000px) {
 				font-size: 30px;
-				padding-left: 10px;
-				padding-right: 10px;
+				padding-left: 20px;
+				padding-right: 20px;
 				line-height: 40px;
 			}
 		}
@@ -281,7 +281,9 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				background: rgba(0, 56, 120, 0.4) url('../../images/gallery_bottom_play.png') center no-repeat;
+				background: rgba(0, 56, 120, 0.4) url('../../images/video.svg') center no-repeat;
+				background-size: 134px;
+
 			}
 		}
 		iframe {
