--- a/frontend/web/uw/sass/gallery.scss
+++ b/frontend/web/uw/sass/gallery.scss
@@ -12,8 +12,8 @@
 	    line-height: 50px;
 	    @media screen and (max-width: 1000px) {
 			font-size: 30px;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 			line-height: 40px;
 		}
 	}
@@ -24,14 +24,14 @@
 		font-weight: 300;
 		padding-top: 94px;
 		@media screen and (max-width: 1000px) {
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 		}
 	}
 	.grid_item {
 		//width: 50%;
 		width: 50%;
-		  padding: 9px;
+		  padding: 10px;
 		  //float: left;
 		@media screen and (max-width: 999px) {
 			width: 100%;
@@ -129,7 +129,8 @@
 		&:before {
 			content: '';
 			display: none;
-			background: rgba(0, 56, 120, 0.4) url('../../images/gallery_open.svg') center no-repeat;
+			background: rgba(0, 56, 120, 0.4) url('../../images/open.svg') center no-repeat;
+			background-size: 134px;
 			position: absolute;
 			width: 100%;
 			height: 100%;
