--- a/frontend/web/uw/sass/renovation.scss
+++ b/frontend/web/uw/sass/renovation.scss
@@ -16,8 +16,8 @@
 		line-height: 39px;
 		@media screen and (max-width: 1000px) {
 			font-size: 30px;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 			line-height: 40px;
 		}
 	}
@@ -28,16 +28,16 @@
 		padding-top: 42px;
 		line-height: 30px;
 		@media screen and (max-width: 1000px) {
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 		}
 	}
 	.select_area {
 		font-size: 15px;
 		padding-top: 51px;
 		@media screen and (max-width: 1000px) {
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 		}
 		@media screen and (max-width: 639px) {
 			text-align: center;
@@ -55,14 +55,19 @@
 			}
 			&.include {
 				color: white;
-				background: #003878;
+				background: none;
 				border: 1px solid #003878;
+				&.active {
+					background:#003878;
+				}
 			}
 			&.start {
 				border: 1px solid #c19f63;
 				background: none;
 				color: #010211;
-				
+				&.active {
+					background:#c19f63;
+				}
 			}
 		}
 	}
@@ -78,8 +83,8 @@
 			padding-top: 58px;
 			padding-bottom: 23px;
 			@media screen and (max-width: 1000px) {
-				padding-left: 10px;
-				padding-right: 10px;
+				padding-left: 20px;
+				padding-right: 20px;
 				line-height: 40px;
 			}
 		}
