--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -159,7 +159,8 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				background: rgba(0, 56, 120, 0.4) url('../../images/gallery_bottom_play.png') center no-repeat;
+				background: rgba(0, 56, 120, 0.4) url('../../images/video.svg') center no-repeat;
+				background-size: 134px;
 			}
 		}
 		iframe {
