--- a/frontend/web/uw/stylesheets/front.css
+++ b/frontend/web/uw/stylesheets/front.css
@@ -27,8 +27,8 @@
   /* line 12, ../sass/front.scss */
   .front .front_text h1 {
     font-size: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     line-height: 40px;
   }
 }
@@ -358,9 +358,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(0, 56, 120, 0.4) url("../../images/gallery_bottom_play.png") center no-repeat;
+  background: rgba(0, 56, 120, 0.4) url("../../images/video.svg") center no-repeat;
+  background-size: 134px;
 }
-/* line 287, ../sass/front.scss */
+/* line 289, ../sass/front.scss */
 .front .video iframe {
   position: absolute;
   top: 0px;
